css/loginsignup.css
#login, #register{
    position: fixed;
    height: 100vh;
    width: 100vw;
    z-index: 2;
    background-color: rgba(0, 0, 0, 0.404);
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    visibility: hidden;
    transition: opacity .2s, visibility .2s;
    text-align: center;
}
#login:target, #register:target{
    opacity: 1;
    visibility: visible;
}

#login > fieldset, #register > fieldset{
    background-color: white;
    position: relative;
    width: 100%;
    height: 100%;
    max-width: 500px;
    border: none;
    border-radius: .5vw;
    transform: scale(0.1) translate(-50px, 50px);
    transform-origin: top right;
    transition: .5s cubic-bezier(.18, .91, .69, .92);
    
}

#login:target > fieldset, #register:target > fieldset{
    transform: none;
    transition: .5s cubic-bezier(.17, .84, .24, 1);
}

#login > fieldset > label, #register > fieldset > label{
    margin: 20px auto;
}
#login > fieldset > input, #register > fieldset > input{
    height: 40px;
    width: 100%;
    border: 1px solid lightgray;
}
#login > fieldset > input[type="submit"], #register > fieldset > input[type="submit"]{
    margin: 10px 0;
    background: white;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.28);
    cursor: pointer;
    transition: box-shadow .2s, background-color .2s;
}

#login > fieldset > input[type="submit"]:hover, #register > fieldset > input[type="submit"]:hover{
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.41);
    background-color: whitesmoke;
}

#login .cancel_modal > i, #register .cancel_modal > i{
    position: absolute;
    top: 12px;
    right: 15px;
    line-height: 30px;
    border-radius: 100%;
    transition: .2s cubic-bezier(.19, .83, .34, .97);
}

#login .cancel_modal > i:hover, #register .cancel_modal:hover{
    transform: rotate(90deg);
    transform-origin: center;
}

@media (min-width:480px){
    #login > fieldset, #register > fieldset{
        height: auto;
    }
}

